--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             top: 0; left: 0;
             width: 100%; height: 100%;
             /* AQUÍ ABAJO ES DONDE CAMBIAS LA IMAGEN */
-            background-image: url('https://cdn-icons-png.flaticon.com/512/3448/3448339.png'); 
+            background-image: url('linner.png'); 
             background-position: center center; /* Centrada */
             background-repeat: no-repeat;       /* Que no se repita como mosaico */
             background-size: 50%;               /* Tamaño de la imagen (ajusta si es necesario) */
