--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             background-size: 200%;               /* Tamaño de la imagen (ajusta si es necesario) */
             opacity: 0.40;                      /* TRANSPARENCIA: Entre más bajo el número, más transparente (0.05 es muy sutil) */
             z-index: 0;                         /* Asegura que quede al fondo */
-            filter: grayscale(100%);            /* Opcional: hace la imagen blanco y negro para que no distraiga el color */
+                    /* Opcional: hace la imagen blanco y negro para que no distraiga el color */
         }
 
         /* Aseguramos que el contenido (texto e inputs) quede POR ENCIMA de la marca de agua */
